profilelist1exp/unpackaged/objects/Services_Governance_Approver_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Request_Type__c</fullName>
        <label>Approval Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Certification Tier 1</fullName>
                </value>
                <value>
                    <fullName>Technical Certification Tier 2</fullName>
                </value>
                <value>
                    <fullName>DGR Propose Gate Approval</fullName>
                </value>
                <value>
                    <fullName>DGR Qualify Gate Approval</fullName>
                </value>
                <value>
                    <fullName>DGR Contract Gate Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DGR_Territories__c</fullName>
        <label>DGR Territories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER - Canada</fullName>
                </value>
                <value>
                    <fullName>AMER - US East</fullName>
                </value>
                <value>
                    <fullName>AMER - US Federal</fullName>
                </value>
                <value>
                    <fullName>AMER - US North</fullName>
                </value>
                <value>
                    <fullName>AMER - US Northeast</fullName>
                </value>
                <value>
                    <fullName>AMER - US South</fullName>
                </value>
                <value>
                    <fullName>AMER - US Southeast</fullName>
                </value>
                <value>
                    <fullName>AMER - US West</fullName>
                </value>
                <value>
                    <fullName>APJ - Australia/New Zealand</fullName>
                </value>
                <value>
                    <fullName>APJ - China</fullName>
                </value>
                <value>
                    <fullName>APJ - India</fullName>
                </value>
                <value>
                    <fullName>APJ - Japan</fullName>
                </value>
                <value>
                    <fullName>APJ - Korea</fullName>
                </value>
                <value>
                    <fullName>APJ - S. Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA - Central/Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>EMEA - Poland, Russia</fullName>
                </value>
                <value>
                    <fullName>EMEA - France</fullName>
                </value>
                <value>
                    <fullName>EMEA - Germany</fullName>
                </value>
                <value>
                    <fullName>EMEA - Mediterranean, North Africa</fullName>
                </value>
                <value>
                    <fullName>EMEA - Middle East</fullName>
                </value>
                <value>
                    <fullName>EMEA - Southern/Central Africa</fullName>
                </value>
                <value>
                    <fullName>EMEA - UK/Ireland</fullName>
                </value>
                <value>
                    <fullName>EMEA - Western Europe</fullName>
                </value>
                <value>
                    <fullName>LATAM - Brazil</fullName>
                </value>
                <value>
                    <fullName>LATAM - Mexico</fullName>
                </value>
                <value>
                    <fullName>LATAM - Northern Latin America (NOLA)</fullName>
                </value>
                <value>
                    <fullName>LATAM - Southern Latin America (SOLA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Governance_Review_Level__c</fullName>
        <label>Deal Governance Review Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 0</fullName>
                </value>
                <value>
                    <fullName>Level 1a</fullName>
                </value>
                <value>
                    <fullName>Level 1b</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Governance_Approver_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegation_Expires__c</fullName>
        <label>Delegation Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Region_s__c</fullName>
        <label>Delivery Region (s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Defined_Industry__c</fullName>
        <label>Dell Services Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BFSI</fullName>
                </value>
                <value>
                    <fullName>BFSI&amp;DA</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>HCLS</fullName>
                </value>
                <value>
                    <fullName>MRL&amp;E</fullName>
                </value>
                <value>
                    <fullName>TT&amp;H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Defined_LOB__c</fullName>
        <label>Dell Services LOB</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infrastructure &amp; Cloud Computing</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>BPO (Business Process Outsourcing)</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Support &amp; Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Delegate__c</fullName>
        <label>Is Delegate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Governance_Approver_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Area_s__c</fullName>
        <label>Service Area (s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset &amp; Configuration Management</fullName>
                </value>
                <value>
                    <fullName>Field Services</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Service Desk</fullName>
                </value>
                <value>
                    <fullName>Service Management</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>Auto &amp; Monitoring</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>Capacity Plan/ISIS</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Database Admin</fullName>
                </value>
                <value>
                    <fullName>Desktop Engineering</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>iSeries (AS400)</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Platform Hosting Windows</fullName>
                </value>
                <value>
                    <fullName>Platform Hosting UNIX</fullName>
                </value>
                <value>
                    <fullName>Service Desk Voice</fullName>
                </value>
                <value>
                    <fullName>Service Management Tools</fullName>
                </value>
                <value>
                    <fullName>ITDS Service Assurance</fullName>
                </value>
                <value>
                    <fullName>Storage Systems</fullName>
                </value>
                <value>
                    <fullName>Storage Backup</fullName>
                </value>
                <value>
                    <fullName>System Management Tools</fullName>
                </value>
                <value>
                    <fullName>HCLS Cloud</fullName>
                </value>
                <value>
                    <fullName>Private Cloud</fullName>
                </value>
                <value>
                    <fullName>vCloud</fullName>
                </value>
                <value>
                    <fullName>vDaas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Services Governance Approver Rule</label>
    <nameField>
        <displayFormat>Rule-{000000}</displayFormat>
        <label>Services Governance Approver Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Governance Approver Rules</pluralLabel>
    <recordTypes>
        <fullName>DGR_Approver_Business_Rule</fullName>
        <active>true</active>
        <description>Record Type used to create DGR Approver Business Rules</description>
        <label>DGR Approver Business Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Cert_Approver_Business_Rule</fullName>
        <active>true</active>
        <description>Record Type used to create Tech Cert Approver Business Rules</description>
        <label>Tech Cert Approver Business Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>